--- a/style.css
+++ b/style.css
@@ -138,8 +138,8 @@
   overflow: hidden;
   width: 350px;
   /* text-align: center; */
-  margin-left: 70px !important;
-  margin-bottom: 50px !important;
+  /* margin-left: 70px !important; */
+  /* margin-bottom: 50px !important; */
 }
 .days {
   display: flex;
@@ -174,11 +174,12 @@
   overflow: hidden;
   width: 350px;
   /* text-align: center; */
-  margin: 70px !important;
-  margin-bottom: 50px !important;
+  /* margin: 70px !important;
+  margin-bottom: 50px !important; */
 }
 .explore-cards {
   display: flex;
+  justify-content: space-around;
 }
 .card-niagra {
   background-color: #f7f5f5;
@@ -187,6 +188,161 @@
   overflow: hidden;
   width: 350px;
   /* text-align: center; */
-  margin-right: 70px !important;
+  /* margin-right: 70px !important;
+  margin-bottom: 50px !important; */
+}
+.tour-type img {
+  width: 100%;
+  position: relative;
+}
+.tour-type {
+  position: relative;
+}
+.tour-type-txt {
+  position: absolute;
+  top: 10%;
+  padding-left: 45%;
+  color: white;
+  font-size: xx-large;
+}
+.adventure-icons {
+  position: absolute;
+  bottom: 15%;
+  left: 20%;
+  display: flex;
+  gap: 50px;
+}
+.adventure-icons li {
+  list-style-type: none;
+}
+.adventure-icons p {
+  color: white;
+  padding: 10px;
+}
+.component {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid red;
+  border-radius: 50%;
+  padding: 30px;
+}
+.component img {
+  height: 60px !important;
+  width: 60px !important;
+}
+
+.hike img {
+  height: 60px;
+  width: 60px;
+}
+
+.walk img {
+  height: 60px;
+  width: 60px;
+}
+
+.sports img {
+  height: 60px;
+  width: 60px;
+}
+.blog-card-1 {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  display: flex;
+  width: 600px;
+  margin-left: 30px !important;
+}
+.blog-card-img img {
+  width: 300px;
+  height: 300px;
+}
+
+.title-head {
+  display: flex;
+  justify-content: space-between !important;
+  padding: 30px;
+}
+.view {
+  display: flex;
+  padding-left: 30px;
+  gap: 10px;
+}
+.blog-card-2 {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  display: flex;
+  width: 600px;
+  margin-right: 30px !important;
+}
+.blog-card {
+  gap: 20px;
+  display: flex;
+  padding-bottom: 50px;
+}
+.review-card-1 {
+  background-color: #e7e4e4;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 600px;
+  margin: 10px !important;
+
+}
+.review-card-1 img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center !important;
+}
+.review-img {
+  display: flex;
+  justify-content: center;
+}
+.review-card-description {
+  padding: 10px;
+}
+.stars {
+  display: flex;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+.img-name {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+.review-card {
+  display: flex;
   margin-bottom: 50px !important;
+}
+.review-card-description{
+  margin-bottom: 20px;
+}
+.bar-bg{
+  background-color: orangered;
+}
+.bar{
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+  padding: 50px;
+  align-items: center;
+}
+
+.bar-txt h{
+font-weight: 900;
+}
+.book-btn{
+  width: 200px;
+  height: 20px;
+  color: white;
+ 
 }
