--- a/style.css
+++ b/style.css
@@ -4,39 +4,53 @@
 .top-header {
   background-color: black;
   display: flex;
-  flex-direction: row;
-  color: aliceblue;
+  color: white;
   padding: 20px;
-  justify-content: space-around;
-}
-.div1 {
-  display: flex;
   justify-content: space-between;
+  padding-left: 140px;
+  padding-right: 140px;
+}
+.div-1 {
+  display: flex;
+  justify-content: space-between !important;
   gap: 150px;
 }
 .gmail {
   display: flex;
 }
+.gmail i {
+  color: orangered;
+}
 .location {
   display: flex;
+}
+.location i {
+  color: orangered;
 }
 .socials {
   display: flex;
   justify-content: space-between;
   gap: 20px;
 }
+.socials i {
+  color: orangered;
+}
 .nav-bar {
   list-style-type: none;
   display: flex;
   gap: 50px;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   padding: 20px;
+  padding-left: 140px;
+  padding-right: 140px;
 }
 .nav-contents {
   display: flex;
-  gap: 60px;
+  /* justify-content: space-between; */
+  gap: 90px;
   align-items: center;
 }
+
 .main {
   position: relative;
 }
@@ -58,6 +72,10 @@
   border: none;
   padding-left: 20px;
   padding-right: 20px;
+}
+.explore-btn button:hover {
+  background-color: orangered;
+  color: #e7e4e4;
 }
 .title {
   display: flex;
@@ -90,27 +108,15 @@
   height: auto;
 }
 
-.card-content {
-  /* padding: 20px; */
-}
-
-.card-title {
-  font-size: 24px;
-  margin: 0 0 10px;
-}
-
 .card-description {
   font-size: 16px;
-  color: #666;
-  margin: 0 0 20px;
+  color: #0b0b0b;
 }
 .card-1 {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  width: 300px;
-  text-align: center;
+
   width: 550px;
 }
 .card-2 {
@@ -133,13 +139,12 @@
 
 .card-itly {
   background-color: #f7f5f5;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0.1, 0, 0.1, 0.1);
   overflow: hidden;
   width: 350px;
-  /* text-align: center; */
-  /* margin-left: 70px !important; */
-  /* margin-bottom: 50px !important; */
+  /* display: flex; */
+  /* flex-direction: column; */
 }
 .days {
   display: flex;
@@ -148,48 +153,46 @@
 .user {
   display: flex;
   gap: 10px;
+  /* color: orangered; */
 }
 .icons {
   display: flex;
   gap: 80px;
   padding: 20px;
+  /* color: orangered; */
 }
 .explore {
   display: flex;
-  gap: 5px;
   border-top: 1px solid #666;
-  padding: 20px;
+  padding: 10px;
+  gap: 5px;
 }
 .card-title {
-  padding: 30px;
-}
-.card-itly img {
-  width: 350px;
-  height: 250px;
-}
-.card-maldives {
-  background-color: #f7f5f5;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0.1, 0, 0.1, 0.1);
-  overflow: hidden;
-  width: 350px;
-  /* text-align: center; */
-  /* margin: 70px !important;
-  margin-bottom: 50px !important; */
+  padding: 20px;
 }
 .explore-cards {
   display: flex;
   justify-content: space-around;
 }
+.card-itly img {
+  width: 350px;
+  height: 250px;
+}
+
+.card-maldives {
+  background-color: #f7f5f5;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0.1, 0, 0.1, 0.1);
+  overflow: hidden;
+  width: 350px;
+}
+
 .card-niagra {
   background-color: #f7f5f5;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0.1, 0, 0.1, 0.1);
   overflow: hidden;
   width: 350px;
-  /* text-align: center; */
-  /* margin-right: 70px !important;
-  margin-bottom: 50px !important; */
 }
 .tour-type img {
   width: 100%;
@@ -349,6 +352,10 @@
   border-radius: 20px;
   margin-right: 30px !important;
 }
+.book-btn button:hover {
+  background-color: orangered;
+  color: #1c0c0c;
+}
 .footer {
   background-color: black;
   display: flex;
@@ -358,17 +365,18 @@
   background-color: white;
   padding: 10px;
 }
-.f-logo{
+.f-logo {
   padding: 10px;
 }
 .f-text {
-  color: white; 
+  color: rgb(253, 249, 249);
+  padding-top: 20px !important;
 }
 .quick-links li {
   list-style-type: none !important;
   padding: 10px;
 }
-.contact li{
+.contact li {
   list-style-type: none !important;
   padding: 10px;
 }
@@ -379,18 +387,37 @@
 .contact {
   color: white;
 }
-.newsletter{
+.contact li {
   color: white;
 }
-.newsletter-contents{
-  padding: 10px;
+.c-icon {
+  display: flex;
+  align-items: center;
+  color: orangered;
 }
+.newsletter {
+  color: rgb(247, 245, 245);
+  padding-left: 20px;
+}
+.newsletter i{
+  color: orangered;
+}
+.newsletter-contents {
+  padding: 20px;
+}
+.f-mail{
+  margin-top: 10px !important;
+}
+.submit {
+  margin-top: 10px !important;
+}
+
 .f-f {
-display: flex;
-justify-content: center !important;
-align-items: center !important;
-border-top:2px solid white ;
-color: white;
-background-color: black;
-padding: 20px;
+  display: flex;
+  justify-content: center !important;
+  align-items: center !important;
+  border-top: 2px solid white;
+  color: white;
+  background-color: black;
+  padding: 20px;
 }
