--- a/style.css
+++ b/style.css
@@ -139,10 +139,10 @@
 
 .card-itly {
   background-color: #f7f5f5;
-  border-radius: 20px;
+  /* border-radius: 10px; */
   box-shadow: 0 4px 8px rgba(0.1, 0, 0.1, 0.1);
   overflow: hidden;
-  width: 350px;
+  width: 380px;
   /* display: flex; */
   /* flex-direction: column; */
 }
@@ -173,33 +173,34 @@
 .explore-cards {
   display: flex;
   justify-content: space-around;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .card-itly img {
-  width: 350px;
+  width: 450px;
   height: 250px;
+  border-top: 4px solid rgb(253, 78, 14);
 }
 .card-maldives {
   background-color: #f7f5f5;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   box-shadow: 0 4px 8px rgba(0.1, 0, 0.1, 0.1);
   overflow: hidden;
-  width: 350px;
-  display: flex;
-  flex-direction: column !important;
-  flex-direction: column-reverse !important;
+  width: 380px;
 }
 .card-maldives img{
-    width: 350px;
+    width: 450px;
   height: 250px;
-}
+    border-bottom: 3px solid orangered;
 
+}
 
 .card-niagra {
   background-color: #f7f5f5;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0.1, 0, 0.1, 0.1);
   overflow: hidden;
-  width: 350px;
+  width: 380px;
 }
 .tour-type img {
   width: 100%;
