--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@
 .socials i {
   color: orangered;
 }
+.menu-icon{
+  width:25px;
+  cursor: pointer;
+display: none;
+color: rgb(10, 9, 9);
+}
 .nav-bar {
   list-style-type: none;
   display: flex;
@@ -50,7 +56,21 @@
   gap: 90px;
   align-items: center;
 }
-
+.nav-contents:hover h {
+  color: orangered;
+}
+.btn-nav {
+  font-size: medium;
+  padding: 10px;
+  border: #dedbdb 2px solid;
+  border-radius: 10px;
+  background-color: white;
+  cursor: pointer;
+}
+.btn-nav:hover {
+  background-color: orangered;
+  color: white;
+}
 .main {
   position: relative;
 }
@@ -102,12 +122,10 @@
   padding-right: 100px;
   padding-bottom: 60px;
 }
-
-.card-image {
-  width: 100%;
-  height: auto;
+.card img {
+  width: 400px;
+  height: 100%;
 }
-
 .card-description {
   font-size: 16px;
   color: #0b0b0b;
@@ -116,8 +134,9 @@
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-  width: 550px;
+  width: 400px;
+  overflow: hidden;
+  text-align: center;
 }
 .card-2 {
   background-color: #fff;
@@ -125,7 +144,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   text-align: center;
-  width: 550px;
+  width: 400px;
 }
 .card-3 {
   background-color: #fff;
@@ -134,7 +153,7 @@
   overflow: hidden;
   /* width: 300px; */
   text-align: center;
-  width: 550px;
+  width: 400px;
 }
 
 .card-itly {
@@ -161,11 +180,17 @@
   padding: 20px;
   /* color: orangered; */
 }
+.icons i {
+  color: orangered;
+}
 .explore {
   display: flex;
   border-top: 1px solid #666;
   padding: 10px;
   gap: 5px;
+}
+.explore i {
+  color: orangered;
 }
 .card-title {
   padding: 20px;
@@ -188,11 +213,10 @@
   overflow: hidden;
   width: 380px;
 }
-.card-maldives img{
-    width: 450px;
+.card-maldives img {
+  width: 450px;
   height: 250px;
-    border-bottom: 3px solid orangered;
-
+  border-bottom: 3px solid orangered;
 }
 
 .card-niagra {
@@ -407,13 +431,13 @@
   color: rgb(247, 245, 245);
   padding-left: 20px;
 }
-.newsletter i{
+.newsletter i {
   color: orangered;
 }
 .newsletter-contents {
   padding: 20px;
 }
-.f-mail{
+.f-mail {
   margin-top: 10px !important;
 }
 .submit {
@@ -428,4 +452,30 @@
   color: white;
   background-color: black;
   padding: 20px;
+}
+
+/* Responsive  */
+@media only screen and (max-width: 700px) {
+  .top-header{
+    background: black;
+  }
+ .nav-bar{
+  width:100%;
+  background: orangered;
+  color: black;
+  position: absolute;
+  top: 75px;
+  right: 1;
+  z-index:2;
+ }
+.nav-bar h{
+  display:block;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.menu-icon{
+  display: block;
+}
+
+
 }
