--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
-  margin: 0px !important;
+  margin: 0;
+  padding: 0;
 }
 .top-header {
   background-color: black;
@@ -9,6 +10,11 @@
   justify-content: space-between;
   padding-left: 140px;
   padding-right: 140px;
+}
+.sticky {
+  position: sticky;
+  top: 0;
+  z-index: 99;
 }
 .div-1 {
   display: flex;
@@ -34,33 +40,103 @@
 }
 .socials i {
   color: orangered;
+  /* size: 20px; */
 }
+
+nav {
+  background-color: rgb(248, 245, 245);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.nav-bar ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-decoration: none;
+  gap: 60px;
+}
+.nav-bar a {
+  color: black;
+  text-decoration: none;
+}
+nav a:hover {
+  color: orangered;
+}
+.nav-cont {
+  position: relative;
+}
+.nav-menu {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+  /* padding-left: 30px;
+  padding-right: 30px; */
+  list-style-type: none;
+  width: 100%;
+}
+.nav-bar {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+.top-header {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+.nav-bar a {
+  font-size: 18px;
+}
+.nav-logo {
+  padding-top: 10px;
+}
+.mobile-nav {
+  display: none;
+  justify-content: space-between;
+}
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 200px;
+  z-index: 999;
+  background-color: rgb(252, 166, 95);
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.sidebar ul {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+}
+
+.sidebar a {
+  width: 100%;
+}
+
+.menu i {
+  display: flex;
+  justify-content: end;
+}
+
 .menu-icon {
   width: 25px;
   cursor: pointer;
   display: none;
   color: rgb(10, 9, 9);
 }
-.menus:hover {
-  color: orangered;
-  cursor: pointer;
-}
-.nav-bar {
-  list-style-type: none;
-  display: flex;
-  gap: 50px;
-
-}
 
 .nav-contents {
   display: flex;
-  /* justify-content: space-between; */
   gap: 90px;
   align-items: center;
 }
 
 .btn-nav {
-  font-size: medium;
+  font-size: 18px;
   padding: 10px;
   border: #dedbdb 2px solid;
   border-radius: 10px;
@@ -80,13 +156,20 @@
 .main-txt {
   position: absolute;
   color: white;
-  font-size: xx-large;
   padding-left: 90px;
   top: 50%;
-  line-height: 66px;
+  line-height: px;
+}
+.main-txt p {
+  font-size: 21px;
+}
+.main-txt h5 {
+  font-size: 40px;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 .explore-btn button {
-  font-size: x-large;
+  font-size: medium;
   padding: 10px;
   border-radius: 10px;
   border: none;
@@ -117,10 +200,11 @@
 }
 .card {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 50px;
+  padding-right: 50px;
   padding-bottom: 60px;
 }
 .card img {
@@ -135,7 +219,7 @@
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 400px;
+  width: 350px;
   overflow: hidden;
   text-align: center;
 }
@@ -145,7 +229,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   text-align: center;
-  width: 400px;
+  width: 350px;
 }
 .card-3 {
   background-color: #fff;
@@ -154,18 +238,9 @@
   overflow: hidden;
   /* width: 300px; */
   text-align: center;
-  width: 400px;
+  width: 350px;
 }
 
-.card-itly {
-  background-color: #f7f5f5;
-  /* border-radius: 10px; */
-  box-shadow: 0 4px 8px rgba(0.1, 0, 0.1, 0.1);
-  overflow: hidden;
-  width: 380px;
-  /* display: flex; */
-  /* flex-direction: column; */
-}
 .days {
   display: flex;
   gap: 10px;
@@ -198,9 +273,17 @@
 }
 .explore-cards {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   padding-left: 30px;
   padding-right: 30px;
+}
+.card-itly {
+  background-color: #f7f5f5;
+  box-shadow: 0 4px 8px rgba(0.1, 0, 0.1, 0.1);
+  overflow: hidden;
+  width: 380px;
+  margin-bottom: 20px;
 }
 .card-itly img {
   width: 450px;
@@ -213,6 +296,7 @@
   box-shadow: 0 4px 8px rgba(0.1, 0, 0.1, 0.1);
   overflow: hidden;
   width: 380px;
+  margin-bottom: 20px;
 }
 .card-maldives img {
   width: 450px;
@@ -255,17 +339,26 @@
   color: white;
   padding: 10px;
 }
-.component {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+.inner-container {
+  position: relative;
+  padding: 40px;
   border: 2px solid red;
   border-radius: 50%;
-  padding: 30px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
-.component img {
+.inner-container:hover {
+  background-color: orangered;
+}
+.inner-container img {
   height: 60px !important;
   width: 60px !important;
+}
+.wrap {
+  position: absolute;
+  inset: 0;
 }
 
 .hike img {
@@ -282,50 +375,55 @@
   height: 60px;
   width: 60px;
 }
+.blog-card {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+}
 .blog-card-1 {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   display: flex;
-  width: 600px;
-  margin-left: 30px !important;
+  width: 500px;
+  /* margin-left: 30px !important; */
 }
 .blog-card-img img {
-  width: 300px;
+  width: 200px;
   height: 100%;
 }
 
 .title-head {
   display: flex;
   justify-content: space-between !important;
-  padding: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
 }
 .view {
   display: flex;
   padding-left: 30px;
   gap: 10px;
 }
-.blog-card-2 {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  display: flex;
-  width: 600px;
-  margin-right: 30px !important;
-}
+
 .blog-card {
   gap: 20px;
   display: flex;
   padding-bottom: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.review-card {
+  display: flex;
+  flex-wrap: wrap;
 }
 .review-card-1 {
   background-color: #e7e4e4;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  width: 600px;
+  width: 400px;
   margin: 10px !important;
 }
 .review-card-1 img {
@@ -342,6 +440,7 @@
 }
 .review-card-description {
   padding: 10px;
+  text-wrap: wrap;
 }
 .stars {
   display: flex;
@@ -363,27 +462,22 @@
 }
 .bar-bg {
   background-color: orangered;
+  padding: 20px;
 }
 .bar {
   display: flex;
   justify-content: space-between;
   height: 100px;
-  padding: 50px;
+
   align-items: center;
 }
-.bar-txt {
-  margin-left: 30px !important;
-}
-.bar-txt h {
-  font-weight: 900;
-}
+
 .book-btn button {
   background-color: white;
   font-size: larger;
   padding: 10px;
   border: none;
   border-radius: 20px;
-  margin-right: 30px !important;
 }
 .book-btn button:hover {
   background-color: orangered;
@@ -392,22 +486,24 @@
 .footer {
   background-color: black;
   display: flex;
-  padding: 40px;
+  flex-wrap: wrap;
+  padding: 20px;
 }
 .f-logo img {
   background-color: white;
-  padding: 10px;
 }
 .f-logo {
-  padding: 10px;
+  /* margin: 10px; */
 }
 .f-text {
   color: rgb(253, 249, 249);
-  padding-top: 20px !important;
+}
+.col-1 {
+  display: flex;
 }
 .quick-links li {
   list-style-type: none !important;
-  padding: 10px;
+  padding-top: 10px;
 }
 .contact li {
   list-style-type: none !important;
@@ -415,10 +511,11 @@
 }
 .quick-links {
   color: white;
-  /* padding: 15px; */
+  padding-left: 50px;
 }
 .contact {
   color: white;
+  padding-left: 50px;
 }
 .contact li {
   color: white;
@@ -430,7 +527,6 @@
 }
 .newsletter {
   color: rgb(247, 245, 245);
-  padding-left: 20px;
 }
 .newsletter i {
   color: orangered;
@@ -441,40 +537,90 @@
 .f-mail {
   margin-top: 10px !important;
 }
+.email-icon {
+  display: flex;
+  align-items: center;
+}
 .submit {
-  margin-top: 10px !important;
+  background-color: orangered;
+  padding: 5px;
+  color: white;
+  border-radius: 10px;
+}
+.submit:hover {
+  background-color: rgb(249, 249, 248);
+  color: orangered;
 }
 
 .f-f {
   display: flex;
   justify-content: center !important;
-  align-items: center !important;
-  border-top: 2px solid white;
+  border-top: 1.5px solid white;
   color: white;
   background-color: black;
-  padding: 20px;
+  padding: 10px;
 }
 
-/* Responsive  */
-@media only screen and (max-width: 768px) {
-  .top-header {
-    display: none;
-  }
-  .nav-bar {
-    width: 100%;
-    background: orangered;
-    color: black;
-    position: absolute;
-    top: 75px;
-    right: 1;
-    z-index: 2;
-  }
-  .nav-bar h {
-    display: block;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .menu-icon {
-    display: block;
-  }
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 300px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  aspect-ratio: 18 / 8;
+}
+.contact-page {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 40px;
+  margin-left: 40px;
+}
+.contact-form {
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1),
+    /* bottom-right shadow */ 0 -4px 8px rgba(0, 0, 0, 0.1),
+    /* top-left shadow */ 4px 0 8px rgba(0, 0, 0, 0.1),
+    /* right shadow */ -4px 0 8px rgba(0, 0, 0, 0.1); /* left shadow */
+  background-color: #ffffff;
+
+}
+.contact-form h2{
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+.name {
+  display: flex;
+  justify-content: space-between;
+}
+form{
+  padding: 40px;
+  line-height: 40px;
+  
 }
